Make Lighting Great again i think